[package]
name = "styler"
version = "0.1.0"
authors = ["gahag <gabriel.s.b@live.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.4"
serde = "1.0.106"
scraper = { version = "0.11.0", default-features = false }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
telegram-bot = "0.7.0"
futures = "0.3.4"
async-trait = "0.1.30"
simple_logger = "1.6.0"
log = "0.4.8"

[profile.release]
lto = true
